<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    <TextView-->
    <!--        android:id="@+id/text_launch"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_name"
        android:layout_below="@+id/text_status"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/name"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/text_email"
        android:layout_below="@+id/text_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/email"
        tools:targetApi="o" />

    <!--=========================================================================================-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nestedLinearLayout"
        android:layout_below="@+id/text_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text_geocodeSearch"
            android:layout_alignParentLeft="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:inputType="text"
            android:maxLines="1"
            android:hint="Zip Code, Address, or Major City Name"
            tools:targetApi="o" />

        <Button
            android:id="@+id/search"
            android:layout_toRightOf="@id/text_geocodeSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/search"/>

    </LinearLayout>

    <!--=========================================================================================-->

    <TextView
        android:id="@+id/text_result"
        android:layout_below="@+id/nestedLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_result_status"
        android:layout_below="@id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
